--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,6 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lexend", sans-serif;
+  color: #fff;
 }
